Updated <FuncHeader: None main2(args=0); @0x40071d>

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "hwu71"
 version = 0
-last_push_time = 1660091615
-last_push_artifact = 4196125
-last_push_artifact_type = "function"
+last_push_time = -1
+last_push_artifact = -1
+last_push_artifact_type = -1
